<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>caddy_ai2_ros2_bringup</name>
  <version>0.0.1</version>
  <description>ROS2 bringup package for Caddy AI2</description>
  <maintainer email="racarla1@inf.upv.es">Rafael Carbonell Lázaro</maintainer>
  <license>CC-BY-4.0</license>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <test_depend>ament_lint_auto</test_depend>
  <test_depend>ament_lint_common</test_depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
